--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,51 @@
   "name": "iods/module-optimize",
   "description": "A SEO library for getting the most out of Magento Catalog data.",
   "type": "magento2-module",
-  "homepage": "http://ryemiller.io",
+  "version": "0.0.1",
   "license": [
     "MIT"
   ],
+  "authors": [
+    {
+      "name": "Rye Miller",
+      "email": "rye@drkstr.dev",
+      "homepage": "https://ryemiller.io",
+      "role": "Developer"
+    }
+  ],
+  "minimum-stability": "dev",
+  "repositories": {
+    "magento": {
+      "type": "composer",
+      "url": "https://repo.magento.com/"
+    }
+  },
   "require": {
-    "php": ">=7.3.0"
+    "php": ">=7.4",
+    "magento/framework": ">=103.0.3-p1",
+    "magento/module-config": ">=101.2.3",
+    "magento/module-backend": ">=102.0.3",
+    "symfony/console": "*"
+  },
+  "require-dev": {
+    "phpstan/extension-installer": "^1.0",
+    "phpstan/phpstan": "^0.11",
+    "phpstan/phpstan-phpunit": "^0.11",
+    "phpunit/phpunit": "*",
+    "composer/composer": "*@dev"
   },
   "autoload": {
     "files": ["registration.php"],
     "psr-4": {
-      "Iods\\Optimize\\": ""
+      "Iods\\Optimize\\": "src"
     }
   },
-  "version": "0.0.1"
+  "scripts": {
+    "test": [
+      "@phpstan",
+      "@phpunit"
+    ],
+    "phpstan": "phpstan analyse",
+    "phpunit": "phpunit --no-coverage"
+  }
 }
