--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "iods/module-optimize",
   "description": "A SEO library for getting the most out of Magento Catalog data.",
   "type": "magento2-module",
-  "version": "0.0.1",
+  "version": "000.1.1",
   "license": [
     "MIT"
   ],
@@ -11,7 +11,6 @@
       "name": "Rye Miller",
       "email": "rye@drkstr.dev",
       "homepage": "https://ryemiller.io",
-      "role": "Developer"
     }
   ],
   "minimum-stability": "dev",
@@ -22,16 +21,21 @@
     }
   },
   "require": {
-    "php": ">=7.4",
-    "magento/framework": ">=103.0.3-p1",
-    "magento/module-config": ">=101.2.3",
-    "magento/module-backend": ">=102.0.3",
+    "php": ">=8.1",
+    "iods/module-base": "*",
+    "iods/module-baseui": "*",
+    "iods/module-connect": "*",
+    "iods/module-sysconfig": "*",
+    "iods/module-bunyan": "*",
+    "iods/module-cream": "*",
+    "iods/module-frostbite": "*",
+    "magento/framework": ">=103.0.5-p1",
     "symfony/console": "*"
   },
   "require-dev": {
-    "phpstan/extension-installer": "^1.0",
-    "phpstan/phpstan": "^0.11",
-    "phpstan/phpstan-phpunit": "^0.11",
+    "phpstan/extension-installer": "*",
+    "phpstan/phpstan": "*",
+    "phpstan/phpstan-phpunit": "*",
     "phpunit/phpunit": "*",
     "composer/composer": "*@dev"
   },
